@@ -11,7 +11,6 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import static java.util.Objects.nonNull;
 import static no.nav.dolly.bestilling.pensjonforvalter.PensjonforvalterClient.PENSJON_FORVALTER;
@@ -20,6 +19,7 @@ import static no.nav.dolly.bestilling.pensjonforvalter.PensjonforvalterClient.TP
 import static no.nav.dolly.domain.resultset.SystemTyper.PEN_FORVALTER;
 import static no.nav.dolly.domain.resultset.SystemTyper.PEN_INNTEKT;
 import static no.nav.dolly.domain.resultset.SystemTyper.TP_FORVALTER;
+import static no.nav.dolly.mapper.AbstractRsStatusMiljoeIdentForhold.decodeMsg;
 import static org.apache.commons.lang3.StringUtils.isNotBlank;
 
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
@@ -31,7 +31,7 @@ public final class BestillingPensjonforvalterStatusMapper {
         Map<String, Map<String, Map<String, List<String>>>> meldStatusMiljoeIdents = new HashMap();
 
         progressList.forEach(progress -> {
-            if (isNotBlank(progress.getPensjonforvalterStatus())) {
+            if (isNotBlank(progress.getPensjonforvalterStatus()) && progress.getPensjonforvalterStatus().split("#").length > 1) {
                 List.of(progress.getPensjonforvalterStatus()
                         .split("\\$")).forEach(meldingMiljoStatus -> {
                     String melding = meldingMiljoStatus.split("\\#")[0];
@@ -56,7 +56,7 @@ public final class BestillingPensjonforvalterStatusMapper {
     }
 
     private static void insertArtifact(Map<String, Map<String, Map<String, List<String>>>> msgStatusIdents,
-            String melding, String status, String miljoe, String ident) {
+                                       String melding, String status, String miljoe, String ident) {
 
         if (msgStatusIdents.containsKey(melding)) {
             if (msgStatusIdents.get(melding).containsKey(status)) {
@@ -87,16 +87,16 @@ public final class BestillingPensjonforvalterStatusMapper {
                     .navn(type.getBeskrivelse())
                     .statuser(
                             meldStatusMiljoeIdents.get(clientid).entrySet().stream().map(entry ->
-                                    RsStatusRapport.Status.builder()
-                                            .melding(entry.getKey().replaceAll("=", ":").replaceAll("&", ","))
-                                            .detaljert(entry.getValue().entrySet().stream().map(miljeStatus ->
-                                                    RsStatusRapport.Detaljert.builder()
-                                                            .miljo(miljeStatus.getKey())
-                                                            .identer(miljeStatus.getValue())
-                                                            .build())
-                                                    .collect(Collectors.toList()))
-                                            .build())
-                                    .collect(Collectors.toList()))
+                                            RsStatusRapport.Status.builder()
+                                                    .melding(decodeMsg(entry.getKey()))
+                                                    .detaljert(entry.getValue().entrySet().stream().map(miljeStatus ->
+                                                                    RsStatusRapport.Detaljert.builder()
+                                                                            .miljo(miljeStatus.getKey())
+                                                                            .identer(miljeStatus.getValue())
+                                                                            .build())
+                                                            .toList())
+                                                    .build())
+                                    .toList())
                     .build());
         } else {
             return Collections.emptyList();
